Fix overflow

--- a/css/base.css
+++ b/css/base.css
@@ -18,6 +18,8 @@ body {
   font-family: "Trebuchet MS", monospace;
   color: var(--main-text-color);
   background: black;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 425px) {
